<resources>
    <string name="app_name">Tecno Store Perú</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_principal_menu">PrincipalMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_icon_users">GESTIÓN DE USUARIOS</string>
    <string name="nav_icon_user">USUARIOS</string>
    <string name="nav_icon_tools">ROLES</string>
    <string name="nav_icon_menus">MENUS</string>
    <string name="nav_icon_rolenlace">ROL ENLACE</string>
    <string name="nav_icon_inventario">GESTIÓN DE INVENTARIO</string>
    <string name="nav_icon_banco">GESTIÓN DE BANCO</string>
    <string name="nav_icon_proovedores">GESTIÓN DE PROOVEDORES</string>
    <string name="nav_icon_consulta">GESTIÓN DE CONSULTA</string>
    <string name="nav_header_correo">Correo</string>
    <string name="nav_header_rol">Rol</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_venta">Ventas</string>
    <string name="menu_reporte">Reporte</string>
</resources>