<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inventary"
            android:icon="@drawable/ic_menu_inventario"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_venta"
            android:icon="@drawable/ic_menu_ventas"
            android:title="@string/menu_venta" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_reporte"
            android:title="@string/menu_reporte"/>
    </group>
    <item android:title="configuración">
        <menu>
            <group android:checkableBehavior="single">
                    <item android:id="@+id/login"
                        android:icon="@drawable/ic_cerrar_sesion"
                        android:title="cerrar sesión"
                        />
            </group>
        </menu>

    </item>
</menu>