<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_principal"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventary"
        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.inventario.InventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_venta"
        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.venta.VentaFragment"
        android:label="@string/menu_venta"
        tools:layout="@layout/fragment_venta" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.proyectodam1.ui.main.principalMenu.ui.reporte.ReporteFragment"
        android:label="@string/menu_reporte"
        tools:layout="@layout/fragment_reporte" />
</navigation>